test_regress/t/t_class2.out
%Error-UNSUPPORTED: t/t_class2.v:35:16: Unsupported: Class '::' references: 'Cls'
   35 |       if (Cls::ENUM_VAL != 22) $stop;
      |                ^~~~~~~~
%Error: Internal Error: t/t_class2.v:35:11: ../V3LinkDot.cpp:#: Bad package link
   35 |       if (Cls::ENUM_VAL != 22) $stop;
      |           ^~~
                        ... See the manual and https://verilator.org for more assistance.
